LIBITD-1648. Created "etc/" directory to hold configuration information
Created "etc/" subdirectory to hold application configuration
information.

Moved contents of "storage/etc" directory to "etc/" and updated all
references.

https://issues.umd.edu/browse/LIBITD-1648

--- a/.dockerignore
+++ b/.dockerignore
@@ -5,9 +5,8 @@
 logs/*
 !logs/.keep
 
-# Working storage directory, except for storage/etc
+# Working storage directory, except for storage/circrequests/README.md
 storage/*
-!storage/etc
 !storage/circrequests
 
 storage/circrequests/*
