LIBITD-1647. Added "storage" directories for "items" command
Added "storage" and "tests/storage" directories so that there would
be directories to write server requests/response to.

Added the README.md files for those directories to ".gitignore".

https://issues.umd.edu/browse/LIBITD-1647

--- a/.gitignore
+++ b/.gitignore
@@ -8,15 +8,23 @@ logs/*
 # Working storage directory, except for storage/circrequests/README.md
 storage/*
 !storage/circrequests
+!storage/items
 
 storage/circrequests/*
 !storage/circrequests/README.md
+
+storage/items/*
+!storage/items/README.md
 
 # Test storage directory, except for storage/circrequests/README.md
 tests/storage/*
 !tests/storage/circrequests
 tests/storage/circrequests/*
 !tests/storage/circrequests/README.md
+
+!tests/storage/items
+tests/storage/items/*
+!tests/storage/items/README.md
 
 # Python dependency files
 caia.egg-info
